--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    padding: 1rem;
+    padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     background-color:hsl(30, 18%, 87%);
@@ -17,7 +17,9 @@ body {
     border-radius: 15px;
     width: 32%;
     padding: 1.5rem;
+    margin-top:  1rem; 
     color:hsl(30, 10%, 34%);
+
 }
 .img  {
     display: flex;
@@ -99,7 +101,7 @@ th{
         width: 100%;
         padding-left: 50px;
         padding-top: 0;
-        overflow: hidden;
+        margin-top: 0;
     }
     body{
         padding: 0;
